Implement BadFactoryTest in pure Java