@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,10 +21,33 @@
  * questions.
  */
 
+/*
+ * @test
+ * @bug 8196959
+ * @summary BadFactory that results in NPE being thrown from ScriptEngineManager
+ * @library /javax/script/JDK_8196959
+ * @build BadFactory BadFactoryTest
+ * @run junit/othervm BadFactoryTest
+ * @run junit/othervm -Djava.security.manager=allow BadFactoryTest
+ */
+
+import org.junit.jupiter.api.Test;
+
+import javax.script.ScriptEngineFactory;
 import javax.script.ScriptEngineManager;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class BadFactoryTest {
-    public static void main(String[] args) {
+
+    @Test
+    public void scriptEngineManagerShouldLoadBadFactory() {
         ScriptEngineManager m = new ScriptEngineManager();
+        // Sanity check that ScriptEngineManager loads the BadFactory
+        Optional<ScriptEngineFactory> badFactory = m.getEngineFactories().stream()
+                .filter(fac -> fac.getClass() == BadFactory.class)
+                .findAny();
+        assertTrue(badFactory.isPresent(), "BadFactory not loaded");
     }
 }
